--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,233 @@
-html, body{
+@import url('https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.min.css');
+
+html,
+body {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: ‘NanumSquareRound’, sans-serif;
+}
+
+input,
+button {
+  font-family: ‘NanumSquareRound’, sans-serif;
+}
+
+ul,
+ol {
+  list-style: none;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #fafafa;
+  border: 1px solid #cfcfcf;
+  border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #282B30;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.wrapper {
+  width: 100%;
+  height: 100%;
+  background-color: #E4E4E4;
+  min-width: 100%;
+}
+
+nav {
+  height: 60px;
+  line-height: 60px;
+  background-color: #282B30;
+  padding-left: 20px;
+}
+
+.nav__brand a {
+  font-size: 16px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.topo__flex {
+  width: 100%;
+  height: calc(100% - 60px);
+  display: flex;
+  justify-content: space-around;
+  overflow-x: auto;
+  align-items: center;
+}
+
+.left__list,
+.right__list {
+  width: 300px;
+  min-width: 300px;
+  height: 92%;
+}
+
+.right__list {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.topology__map {
+  width: 1200px;
+  height: 92%;
+  background-color: #fff;
+  border: 1px solid #D2D2D2;
+  border-radius: 5px;
+  overflow: auto;
+}
+
+.topo__list__cover {
+  box-sizing: border-box;
+  background-color: #F5F5F5;
+  border: 1px solid #C5C5C5;
+  border-radius: 5px;
+  padding: 15px 20px;
+  overflow: hidden;
+}
+
+.topo__header {
+  font-weight: 100;
+  font-size: 26px;
+}
+
+.list__el {
+  height: 60px;
+  line-height: 60px;
+  cursor: pointer;
+}
+
+.list__el:hover {
+  background-color: #eaeaea;
+}
+
+.map__image {
+  background-image: url(../image/icon/map.png);
+  background-size: 100%;
+  background-position: center;
+}
+
+.node__image {
+  background-image: url(../image/icon/network.png);
+  background-size: 100%;
+  background-position: center;
+}
+
+.path__image {
+  background-image: url(../image/icon/segment.png);
+  background-size: 100%;
+  background-position: center;
+}
+
+.list__image {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  vertical-align: middle;
+  margin: 0px 15px;
+}
+
+.btn__basic {
+  width: 100%;
+  height: 46px;
+  background-color: #282B30;
+  color: #fff;
+  border-radius: 5px;
+  font-size: 15px;
+  border: none;
+  cursor: pointer;
+  margin-top: 15px;
+}
+
+.btn__basic:hover {
+  background-color: rgb(38, 53, 73);
+}
+
+.mode__list__cover {
+  height: 18%;
+}
+
+.element__list__cover {
+  height: 81%;
+}
+
+.topo__sub__header {
+  font-weight: 600;
+  font-size: 17px;
+  margin: 15px 10px;
+}
+
+.path__list {
+  margin-top: 45px;
+}
+
+.topo__list {
+  max-height: 600px;
+  overflow-y: auto;
+}
+
+.topo__list__small {
+  height: 230px;
+  overflow-y: auto;
+}
+
+.mode__list{
+  display: flex;
+  height: 60px;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 10px;
+
+}
+
+.mode__list__el{
+  width: 50px;
+  height: 50px;
+  background-size: 45%;
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.mode__list__el:hover{
+  background-color: #eaeaea;
+}
+
+.mode__list__el.active{
+  background-color: #eaeaea;
+  border: 1px solid #bdbdbd;
+}
+
+.mode__list__el#select{
+  background-image: url(../image/icon/select.png);
+}
+.mode__list__el#add{
+  background-image: url(../image/icon/node.png);
+}
+.mode__list__el#line{
+  background-image: url(../image/icon/path.png);
+}
+.mode__list__el#delete{
+  background-image: url(../image/icon/delete.png);
 }
